# yashima_bot_atri

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: _yashima_config.toml  stopwords.txt
src/plugins/group_yashima/: __init__.py  exceptions.py  notice.py
src/plugins/group_yashima/config/: __init__.py  load.py  model.py
src/plugins/group_yashima/database/: __init__.py  handler.py  initialize.py  model.py  register.py
src/plugins/group_yashima/diary/: __init__.py  handler.py  parser.py
src/plugins/group_yashima/report/: __init__.py  daily_report.py  handler.py
src/plugins/group_yashima/sender/: __init__.py  bot.py  model.py  send.py
src/plugins/group_yashima/utils/: __init__.py  apis.py  rules.py
src/plugins/guild_yashima/: __init__.py  character.py  clock.py  db.py  db_config.py  http.py  image.py  minecraft_msg.py  notice.py  records.py  send.py  utils.py
src/plugins/guild_yashima/clock/: __init__.py  db_model.py  scheduler.py
src/plugins/guild_yashima/database/: db_init.py
src/plugins/guild_yashima/diary/: __init__.py  db_model.py  image.py  record.py  recover.py  scheduler.py  utils.py
src/plugins/guild_yashima/forum/: __init__.py  config.py  db_model.py  db_operater.py  db_operator.py  parse.py  types.py  utils.py
src/plugins/guild_yashima/guild_analysis/: chart_manager.py  utils.py
src/plugins/guild_yashima/guild_plan/: __init__.py  (+4 more)
tests/: conftest.py
tests/group_yashima/diary/: test_handler.py  test_matcher.py
tests/group_yashima/utils/: events.py  patches.py
(+105 files in other folders)
